# cgal

./: CMakeLists.txt  compile_commands.json
inc/: GalaxyConfig.h.in  gallib.hpp  star.hpp
src/: main.cpp  star.cpp
